# TechRecruiterAIForChinaBusinessFront

./: .env.example  .gitignore  CLAUDE.md  ENVIRONMENT_CONFIG.md  README.md  debug_nearest_station.md  package-lock.json  package.json
src/: App.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/components/: ErrorBoundary.tsx
src/components/auth/: LoginForm.tsx  ProtectedRoute.tsx
src/components/batch-matching/: BatchMatchingTab3.tsx  CandidateDetailDialog.tsx  FilterArea.tsx  MatchResultItem.tsx
src/components/candidates/: BulkEmailTab.tsx  CandidateEdit.tsx  CandidateForm.tsx  CandidateFormStyled.tsx  CandidateList.tsx  ResumeUpload.tsx  ResumeUploadStyled.tsx  types.ts
src/components/cases/: EmailSenderContainer.tsx  StructuredCaseForm.tsx
src/contexts/: AuthContext.tsx
src/hooks/: useEmailTemplates.ts  useEngineers.ts  useEnvironmentLoader.ts  useProjectArchives.ts  useProjects.ts
src/pages/: Auth.tsx  AuthDebug.tsx  BatchMatching.tsx  BulkEmail.tsx  Candidates.tsx  Cases.tsx  Dashboard.tsx  Email.tsx  EmailAnalysis.tsx  Index.tsx  Matching.tsx  Profile.tsx  Settings.tsx  TestPage.tsx
src/services/: aiMatchingService.ts  attachmentService.ts  configService.ts  emailTemplateService.ts  engineerService.ts  matchingHistoryService.ts  projectService.ts
src/types/: email-template.ts
src/utils/: auth-api.ts  auth-debug.ts  backend-api.ts  csvUtils.ts  engineerDataTransform.ts
supabase/migrations/: 20250625000000-add-manager-fields-to-engineers.sql
(+51 files in other folders)
