[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.88.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
regex = "1"
tauri = { version = "2.6.2", features = ["unstable", "devtools"] }
tauri-plugin-log = "2"
nix = { version = "0.30.1", features = ["signal"] }
tauri-plugin-shell = "2"
tokio = { version = "1", features = ["full"] }
libc = "0.2.174"
tauri-plugin-devtools = "2.0.0"
